[tool.poetry]
name = "mirrornode-py"
version = "0.2.0"
description = "MIRRORNODE Python Bridge - FastAPI event hub"
authors = ["Mirrornode <team@mirrornode.dev>"]
packages = [
    { include = "core" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0"
cryptography = "^41.0.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
